--- a/pom.xml
+++ b/pom.xml
@@ -34,8 +34,12 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.15.4</version>
 		</dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
 
-	</dependencies>
+    </dependencies>
 
 	<build>
 		<plugins>
